Update link styles to fix display issues on safari

--- a/style.css
+++ b/style.css
@@ -37,6 +37,9 @@ html {
                 margin: 0 auto;
 
                 & > a {
+                    color: var(--color-background);
+                    text-decoration: none;
+
                     & > button {
                         cursor: pointer;
 
